# Mango-Editor

./: .gitignore  CMakeLists.txt  CPP-GUIDE.md  README.md  TODO.md  download-tree-sitter-grammars.sh
docs/: Troubleshooting.md  colorscheme.md  commands.md  configuration.md  design.md  help.md  help.txt  keymaps.md  modes.md  mouse.md  text.md  vi-mode.md  vim-mode.md
resource/: config.json
resource/config/: colorscheme.json  config.json
resource/ts-queries/c/: highlights.scm
resource/ts-queries/cpp/: highlights.scm
resource/ts-queries/json/: highlights.scm
src/: action.h  buffer.cpp  buffer.h  buffer_manager.cpp  buffer_manager.h  buffer_view.cpp  buffer_view.h  character.cpp  character.h  clipboard.cpp  clipboard.h  cmd_parse.cpp  cmd_parse.h  cmp_menu.cpp  cmp_menu.h  coding.cpp  coding.h  command_manager.cpp  command_manager.h  completer.cpp  completer.h  constants.h  cursor.cpp  cursor.h  draw.cpp  draw.h  editor.cpp  editor.h  editor_event_manager.cpp  editor_event_manager.h  event_loop.cpp  event_loop.h  exception.cpp  exception.h  file.cpp  file.h  filetype.cpp  filetype.h  frame.cpp  frame.h  (+49 more)
src/lsp/: client.cpp  client.h  data.h  rpc.cpp  rpc.h
src/runtime/syntax/: c.json
test/: data_structure_test.cpp  json_test.cpp  logging_test.cpp  subprocess_test.cpp  term_test.cpp  unicode_test.cpp  utils_test.cpp  xxx_manager_test.cpp
